[11.23 경민] 지도 가운데 정렬

--- a/src/main/webapp/resources/css/purchase/purchase-detail-writer.css
+++ b/src/main/webapp/resources/css/purchase/purchase-detail-writer.css
@@ -216,6 +216,9 @@ progress {
 	z-index: 9000000000;
 	border-radius: 15px;
 	display: none;
+	top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 
