[11.23 현수] company 메인 리스트 뿌려주기

--- a/src/main/webapp/resources/css/company/main.css
+++ b/src/main/webapp/resources/css/company/main.css
@@ -182,10 +182,10 @@ tr{
 	font-weight: bold;
 }
 
-tbody>tr:hover{
+/* tbody>tr:hover{
 	background-color: #e6e6e6;
 	cursor: pointer;
-}
+} */
 
 tr>th{
 	font-size: 18px;
