--- a/src/main/webapp/resources/css/purchase/purchase-detail.css
+++ b/src/main/webapp/resources/css/purchase/purchase-detail.css
@@ -19,10 +19,11 @@ body {
 }
 
 
-.section{
-	width: 1073px;
+.section {
+    width: 1073px;
+    border: thick dashed lightgray;
+    border-radius: 20px;
 }
-
 
 /* form wrapper */
 .form-wrapper{
@@ -45,9 +46,9 @@ body {
 
 /* 구분선 */
 
-.line-wrapper> #seprate-line {
-	color: black;
-	width: 100%;
+#seprate-line {
+    height: 10px;
+    border-bottom: thick dashed lightgray;
 }
 
 /* 제목파트 끝 */
@@ -84,7 +85,6 @@ body {
 	height: 100%;
 	width: 100%;
 }
-
 
 
 /* 제품 정보 */
@@ -166,30 +166,33 @@ body {
 
 
 /* 신청해협 & 문의해협 버튼 wrapper */
-.submit-ask {
-	display: flex;
-	justify-content: space-between;
-	width: 220px;
+.submit-ask-wrapper {
+    display: flex;
+    justify-content: space-between;
+    width: 450px;
+    margin-right: 15px;
 }
 
-.submit-ask> div{
-	width: 100px;
-	height: 100px;
-	border-radius: 25px;
-	background-color: #e67e22;
-	display: flex;
-	justify-content: center;
+.submit-ask {
+    width: 200px;
+    height: 100px;
+    border-radius: 25px;
+    background-color: rgb(52, 73, 94);
+    display: flex;
+    justify-content: center;
     align-items: center;
     color: white;
     font-weight: bold;
-    font-size: 19px; 
+    font-size: 25px;
     transition: all 0.13s;
     cursor: pointer;
+    color: white;
 }
 
 /* 신청해협/ 문의해협 버튼 호버 */
-.submit-ask> div:hover{
-	background-color: #f9b67a;
+.submit-ask:hover{
+	background-color: #4888c8;
+	cursor: pointer;
 }
 
 #stock-list {
@@ -212,4 +215,12 @@ body {
 /* 후터 */
 .hooter {
 	height: 200px;
+}
+
+
+.location-and-time {
+    height: 130px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
