--- a/src/main/webapp/resources/css/help/estimate.css
+++ b/src/main/webapp/resources/css/help/estimate.css
@@ -77,9 +77,15 @@
 }
 
 .detail_photo {
-	margin-top: 30px;
+	margin-top: 16px;
+	height: 369px;
 	text-align: center;
 	position: relative;
+}
+
+.detail_photo>#resPhoto{
+	width: 500px;
+	height: 360px;
 }
 
 .emptyResult {
