[11.24 경민] 메뉴 바 링크추가, css 만지작

--- a/src/main/webapp/resources/css/mypage/mypage_common_css.css
+++ b/src/main/webapp/resources/css/mypage/mypage_common_css.css
@@ -212,10 +212,16 @@ html, body {
 
 #setting {
 	color: black;
+	cursor: pointer;
+}
+
+#push_info{
+	cursor: pointer;
 }
 
 #push_info:hover .balloon3{
 	display: block;
+	cursor: pointer;
 }
 
 .balloon3 {  
@@ -392,6 +398,7 @@ html, body {
 	height: 50%;
 	display: flex;
 	justify-content: space-between;
+	cursor: pointer;
 }
 
 #infobox1 {
