[11.24 호준] fileUpload 시퀀스 수정

--- a/src/main/webapp/resources/css/company/all-help.css
+++ b/src/main/webapp/resources/css/company/all-help.css
@@ -72,7 +72,6 @@
 	display: flex;
 	height: 48px;
 	margin-top: 85px;
-	justify-content: space-around;
 }
 
 .sub_menu{
@@ -81,6 +80,7 @@
 	justify-content: space-between;
 	height: 33px;
 	width: 338px;
+	margin-left: 26px;
 }
 
 .sub_menu>div{
