--- a/src/main/webapp/resources/css/main/main.css
+++ b/src/main/webapp/resources/css/main/main.css
@@ -48,11 +48,12 @@ html, body{
 	cursor: pointer;
 }
 
-.join_btn{
-	font-size: 20px;
-	font-weight: bold;
-	cursor: pointer;
-	margin-right: 10px;
+.join_btn {
+    font-size: 20px;
+    font-weight: bold;
+    cursor: pointer;
+    margin-right: 10px;
+    margin-top: 2.3px;
 }
 
 .logout{
@@ -649,7 +650,9 @@ html, body{
    width: 40px;
 }
 
-
+.fas fa-plus{
+	cursor: pointer;
+}
 
 
 
