--- a/src/main/webapp/resources/css/member/login-form.css
+++ b/src/main/webapp/resources/css/member/login-form.css
@@ -1,12 +1,12 @@
 @charset "UTF-8";
 
-html,body {
-	width: 100%;
-	height: 100%;
-	min-width: 1130px;
-	display: flex;
-	justify-content: center;
-	overflow: hidden;
+html, body {
+    width: 100%;
+    height: 830px;
+    min-width: 1130px;
+    display: flex;
+    justify-content: center;
+    overflow: hidden;
 }
 
 .wrap{
@@ -45,22 +45,26 @@ html,body {
 
 /* 오른쪽 박스 기준 */
 .rightBox {
-	float: left;
-	width: 750px;
-	background-color: #D2E4F9;
-	height: 720px;
-	display: flex;
-	justify-content: center;
+    float: left;
+    width: 770px;
+    background-color: #D2E4F9;
+    height: 730px;
+    display: flex;
+    justify-content: center;
+    border-radius: 20px;
 }
 
 .loginTitle {
-	box-shadow: 5px 5px 5px #F8E4D2;
-	border-radius: 20px;
-	height: 500px;
-	width: 400px;
-	padding: 0px 105px 35px;
-	background-color: white;
-	margin: 80px 0 20px 0;
+    box-shadow: 5px 5px 5px #f8e4d2;
+    border-radius: 20px;
+    height: 500px;
+    width: 400px;
+    padding: 0px 105px 35px;
+    background-color: white;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
 
 .login_body {
