--- a/src/main/webapp/resources/css/company/main.css
+++ b/src/main/webapp/resources/css/company/main.css
@@ -182,10 +182,10 @@ tr{
 	font-weight: bold;
 }
 
-/* tbody>tr:hover{
+tbody>tr:hover{
 	background-color: #e6e6e6;
 	cursor: pointer;
-} */
+}
 
 tr>th{
 	font-size: 18px;
@@ -197,6 +197,13 @@ tr>td{
 	font-size: 14px;
 	line-height: 3.3;
 }
+
+tr>td>i{
+	font-size: 33px;
+	position: relative;
+	transform: translateY(23%);
+}
+
 
 .page{
 	width: 300px;
