--- a/src/main/webapp/resources/css/company/all-help.css
+++ b/src/main/webapp/resources/css/company/all-help.css
@@ -321,3 +321,254 @@ tr>td>i{
 	height: 40px;
 	width: 40px;
 }
+
+.list_btn{
+	width: 70px;
+    height: 24px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-weight: bolder;
+    color: black;
+    border: 0;
+    margin-right: 6px;
+    box-shadow: 0 2px 2px 1px grey;
+}
+
+.list_btn:hover{
+	box-shadow: inset 0 0 5px 1px grey;
+}
+
+.list_btn_red{
+	width: 70px;
+    height: 24px;
+    border-radius: 5px;
+    background-color: lightcoral;
+    cursor: pointer;
+    font-weight: bolder;
+    color: white;
+    border: 0;
+    margin-right: 6px;
+    box-shadow: 0 2px 2px 1px grey;
+}
+
+.list_btn_red:hover{
+	box-shadow: inset 0 0 5px 1px #71180e;
+}
+
+.list_btn_green{
+	width: 70px;
+    height: 24px;
+    border-radius: 5px;
+    background-color: rgb(60, 179, 113);
+    cursor: pointer;
+    color: white;
+    font-weight: bolder;
+    border: 0;
+    margin-right: 6px;
+    box-shadow: 0 2px 2px 1px grey;
+}
+
+.list_btn_green:hover{
+	box-shadow: inset 0 0 5px 1px #18683a;
+}
+
+.list_btn_disabled{
+	width: 70px;
+    height: 24px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-weight: bolder;
+    color: gray;
+    border: 0;
+    margin-right: 6px;
+    box-shadow: 0 2px 2px 1px grey;
+    background: rgba(213,213,213, 0.6);
+}
+
+/* 페이징 */
+
+.pg_wrap { clear:both; }
+.pg_page { /* 기본페이지 */
+    width:30px !important;
+    height:30px !important;
+    font-size:15px;
+    color:#333;
+    line-height:33px;
+    padding:0;
+    background:#fff;
+    border:0;
+    border-radius:2px;
+    -moz-border-radius:2px;
+    -webkit-border-radius:2px;
+    text-align:center;
+    display:inline-block;
+}
+.pg_page:hover {
+    background:#f2f2f2;
+}
+.pg_current { /* 현재페이지 */
+    width:30px !important;
+    height:30px !important;
+    font-size:15px;
+    color:#fff;
+    font-weight:normal;
+    line-height:33px;
+    margin:0;
+    padding:0;
+    background:#333;
+    border:0;
+    border-radius:2px;
+    -moz-border-radius:2px;
+    -webkit-border-radius:2px;
+    text-align:center;
+    display:inline-block;
+}
+
+.pg_prev { /* 이전 */
+    position:relative;
+    top:50%;
+    width:28px !important;
+    height:28px !important;
+    background:#fff;
+    border:1px solid #ccc;
+    border-radius:2px;
+    -moz-border-radius:2px;
+    -webkit-border-radius:2px;
+    text-indent:-9999px;
+    display:inline-block;
+}
+.pg_prev:after {
+    position:absolute;
+    top:10px;
+    left:13px;
+    content:"";
+    width:6px;
+    height:6px;
+    border-top:1px solid transparent;
+    border-right:1px solid transparent;
+    border-bottom:1px solid #777;
+    border-left:1px solid #777;
+    transform:rotate(45deg);
+}
+.pg_prev:hover {
+    background:#fff;
+    border:1px solid #333;
+}
+.pg_next { /* 다음 */
+    position:relative;
+    top:50%;
+    width:28px !important;
+    height:28px !important;
+    background:#fff;
+    border:1px solid #ccc;
+    border-radius:2px;
+    -moz-border-radius:2px;
+    -webkit-border-radius:2px;
+    text-indent:-9999px;
+    display:inline-block;
+}
+.pg_next:after {
+    position:absolute;
+    top:10px;
+    right:13px;
+    content:"";
+    width:6px;
+    height:6px;
+    border-top:1px solid #777;
+    border-right:1px solid #777;
+    border-bottom:1px solid transparent;
+    border-left:1px solid transparent;
+    transform:rotate(45deg);
+}
+.pg_next:hover {
+    background:#fff;
+    border:1px solid #333;
+}
+
+.pg_start { /* 처음 */
+    position:relative;
+    top:50%;
+    width:28px !important;
+    height:28px !important;
+    background:#fff;
+    border:1px solid #ccc;
+    border-radius:2px;
+    -moz-border-radius:2px;
+    -webkit-border-radius:2px;
+    text-indent:-9999px;
+    display:inline-block;
+}
+.pg_start:after {
+    position:absolute;
+    top:10px;
+    left:10px;
+    content:"";
+    width:6px;
+    height:6px;
+    border-top:1px solid transparent;
+    border-right:1px solid transparent;
+    border-bottom:1px solid #777;
+    border-left:1px solid #777;
+    transform:rotate(45deg);
+}
+.pg_start:before {
+    position:absolute;
+    top:10px;
+    left:16px;
+    content:"";
+    width:6px;
+    height:6px;
+    border-top: 1px solid transparent;
+    border-right: 1px solid transparent;
+    border-bottom: 1px solid #777;
+    border-left: 1px solid #777;
+    transform:rotate(45deg);
+}
+.pg_start:hover {
+    background:#fff;
+    border:1px solid #333;
+}
+
+.pg_end { /* 맨끝 */
+    position:relative;
+    top:50%;
+    width:28px !important;
+    height:28px !important;
+    background:#fff;
+    border:1px solid #ccc;
+    border-radius:2px;
+    -moz-border-radius:2px;
+    -webkit-border-radius:2px;
+    text-indent:-9999px;
+    display:inline-block;
+}
+.pg_end:after {
+    position:absolute;
+    top:10px;
+    right:10px;
+    content:"";
+    width:6px;
+    height:6px;
+    border-top:1px solid #777;
+    border-right:1px solid #777;
+    border-bottom:1px solid transparent;
+    border-left:1px solid transparent;
+    transform:rotate(45deg);
+}
+.pg_end:before {
+    position:absolute;
+    top:10px;
+    right:16px;
+    content:"";
+    width:6px;
+    height:6px;
+    border-top:1px solid #777;
+    border-right:1px solid #777;
+    border-bottom:1px solid transparent;
+    border-left:1px solid transparent;
+    transform:rotate(45deg);
+}
+.pg_end:hover {
+    background:#fff;
+    border:1px solid #333;
+}
