[11.24 현수] 마이해협 파일 다운로드 기능 구현

--- a/src/main/webapp/resources/css/help/my.css
+++ b/src/main/webapp/resources/css/help/my.css
@@ -342,3 +342,10 @@
 	height: 15px;
 	width: 15px;
 }
+
+/* 다운로드 */
+.download {
+	display: inline-flex;
+	margin-left: 15px;
+	font-size: 30px;	
+}
