--- a/src/main/webapp/resources/css/include/modal/modal.css
+++ b/src/main/webapp/resources/css/include/modal/modal.css
@@ -48,6 +48,11 @@
 	height: 150px;
 }
 
+.company_modal{
+	width: 550px;
+	height: 410px;
+}
+
 .piggy_modal{
 	background-color: white;
 	border-radius: 15px;
