[11.25 현수] 메일 정보 수정, 업체페이지 footer 분리

--- a/src/main/webapp/resources/css/company/help-detail.css
+++ b/src/main/webapp/resources/css/company/help-detail.css
@@ -150,7 +150,7 @@ textarea:focus, input:focus{
 }
 
 .join_btn>button{
-	width: 100%;
+	width: 828px;
 	height: 100%;
 	font-size: 30px;
 	font-weight: bold;
