--- a/src/main/webapp/resources/css/help/detail.css
+++ b/src/main/webapp/resources/css/help/detail.css
@@ -45,7 +45,9 @@
 .detail-text-input input {
 	width: 350px;
 	height: 35px;
+	padding: 0 7px;
 	border-radius: 5px;
+	border: 2px solid;
 	border-color: rgb(213, 213, 213);
 }
 
@@ -54,5 +56,6 @@
 	height: 100px;
 	border-radius: 5px;
 	border: 2px solid;
+	padding: 7px;
 	border-color: rgb(213, 213, 213);
 }
