[11.26 구현] 메인에서의 작업 스미마셍

--- a/src/main/webapp/resources/css/purchase/purchase-detail.css
+++ b/src/main/webapp/resources/css/purchase/purchase-detail.css
@@ -81,8 +81,12 @@ body {
 	height: 430;
 }
 
+.product-detail-image> #uploaded-image> img{
+	object-fit: contain;
+}
+
 .product-detail-image> #uploaded-image> #product-image {
-	height: 100%;
+	height: 400px;
 	width: 100%;
 }
 
