--- a/src/main/webapp/resources/css/purchase/purchase-detail-writer.css
+++ b/src/main/webapp/resources/css/purchase/purchase-detail-writer.css
@@ -94,11 +94,15 @@ i.fas.fa-map-marker-alt {
 
 .product-detail-image> #uploaded-image{
 	width: 100%;
-	height: 430;
+	height: 400px;
+}
+
+.product-detail-image> #uploaded-image> img{
+	object-fit: contain;
 }
 
 .product-detail-image> #uploaded-image> #product-image {
-	height: 100%;
+	height: 400px;
 	width: 100%;
 }
 
