--- a/src/main/webapp/resources/css/management/myAccountBook.css
+++ b/src/main/webapp/resources/css/management/myAccountBook.css
@@ -222,16 +222,17 @@ html, body {
 	font-weight: bold;
 	font-size: 20px;
 	margin-bottom: 10px;
-	margin-top: 20px;
+	margin-top: -5px;
 }
 
 .personal_category{
-	width: 225px;
+	width: 210px;
 	height:40px;
 	border-radius: 10px;
 	border: solid thin lightgray;
 	margin-left: 10px;
 	color: gray;
+	padding: 0 15px;
 	margin-top: 10px;
 }
 
@@ -240,7 +241,7 @@ html, body {
 	display: flex;
 	justify-content: space-between;
 	margin-left: 15px;
-	margin-top: 10px;
+	margin-top: 32px;
 }
 
 
@@ -289,7 +290,7 @@ html, body {
 	font-size: 15px;
 }
 
-.personal_save:focus,.confirm:focus,.fixed_save:focus{
+.personal_save:focus,.fixed_save:focus{
   color: white;
   background-color: rgb(87, 153, 167);
   border-color: rgb(87, 153, 167);
