--- a/src/main/webapp/resources/css/admin/finish-list.css
+++ b/src/main/webapp/resources/css/admin/finish-list.css
@@ -1,33 +1,33 @@
 @charset "UTF-8";
 
 .main{
-	display: flex;
-	height: 830px;
-	width: 1130px;
+   display: flex;
+   height: 830px;
+   width: 1130px;
 }
 
 .aside{
-	height: 100%;
-	width: 230px;
+   height: 100%;
+   width: 230px;
 }
 
 .join_list{
-	border: none;
-	padding-left: 10px;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	margin: 80px 0 20px 0;
-	height: 80px;
-	width: 170px;
-	font-size: 28px;
-	color: white;
-	font-weight: bold;
-	box-shadow: 0px 10px 10px #808080;
-	text-shadow: 2px 2px 5px #808080;
-	border-bottom-right-radius: 20px;
-	border-top-right-radius: 20px;
-	background-color: rgba(52, 73, 94, 0.33);
+   border: none;
+   padding-left: 10px;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   margin: 80px 0 20px 0;
+   height: 80px;
+   width: 170px;
+   font-size: 28px;
+   color: white;
+   font-weight: bold;
+   box-shadow: 0px 10px 10px #808080;
+   text-shadow: 2px 2px 5px #808080;
+   border-bottom-right-radius: 20px;
+   border-top-right-radius: 20px;
+   background-color: rgba(52, 73, 94, 0.33);
 }
 
 .join_list:hover{
@@ -35,41 +35,41 @@
 }
 
 .revision_list{
-	border: none;
-	padding-left: 8px;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	margin: 30px 0 0 0;
-	height: 60px;
-	width: 130px;
-	font-size: 25px;
-	color: white;
-	font-weight: bold;
-	box-shadow: 0px 10px 10px #808080;
-	text-shadow: 2px 2px 5px #808080;
-	border-bottom-right-radius: 15px;
-	border-top-right-radius: 15px;
-	background-color: rgba(52, 73, 94, 0.98);
+   border: none;
+   padding-left: 8px;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   margin: 30px 0 0 0;
+   height: 60px;
+   width: 130px;
+   font-size: 25px;
+   color: white;
+   font-weight: bold;
+   box-shadow: 0px 10px 10px #808080;
+   text-shadow: 2px 2px 5px #808080;
+   border-bottom-right-radius: 15px;
+   border-top-right-radius: 15px;
+   background-color: rgba(52, 73, 94, 0.98);
 }
 
 .finished_list{
-	border: none;
-	padding-left: 8px;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	margin: 30px 0 0 0;
-	height: 60px;
-	width: 130px;
-	font-size: 25px;
-	color: white;
-	font-weight: bold;
-	box-shadow: 0px 10px 10px #808080;
-	text-shadow: 2px 2px 5px #808080;
-	border-bottom-right-radius: 15px;
-	border-top-right-radius: 15px;
-	background-color: rgba(52, 73, 94, 0.98);
+   border: none;
+   padding-left: 8px;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   margin: 30px 0 0 0;
+   height: 60px;
+   width: 130px;
+   font-size: 25px;
+   color: white;
+   font-weight: bold;
+   box-shadow: 0px 10px 10px #808080;
+   text-shadow: 2px 2px 5px #808080;
+   border-bottom-right-radius: 15px;
+   border-top-right-radius: 15px;
+   background-color: rgba(52, 73, 94, 0.98);
 }
 
 .revision_list:hover, .finished_list:hover{
@@ -77,171 +77,170 @@
 }
 
 .section{
-	display: flex;
-	justify-content: flex-start;
-	height: 100%;
-	width: 900px;
+   display: flex;
+   justify-content: flex-start;
+   height: 100%;
+   width: 900px;
 }
 
 .wrapper{
-	width: 860px;
+   width: 860px;
 }
 
 .select_wrapper{
-	display: flex;
-	height: 48px;
-	margin-top: 42px;
-	justify-content: space-between;
-	padding: 0 60px 0 25px;
+   display: flex;
+   height: 48px;
+   margin-top: 42px;
+   justify-content: space-between;
+   padding: 0 60px 0 25px;
 }
 
 .sub_menu{
-	align-self: flex-end;
-	display: flex;
-	justify-content: space-between;
-	height: 33px;
-	width: 170px;
+   align-self: flex-end;
+   display: flex;
+   justify-content: space-between;
+   height: 33px;
+   width: 170px;
 }
 
 .sub_menu>div{
-	width: 80px;
+   width: 80px;
 }
 
 .sub_menu>div>button{
-	border: none;
-	height: 100%;
-	width: 100%;
-	font-weight: bold;
-	font-size: 15px;
-	border-top-left-radius: 15px;
-	border-top-right-radius: 15px;
-	color: white;
-	background-color: rgba(52, 73, 94, 0.98);
-	box-shadow: 4px -1px 5px 1px #999999;
+   border: none;
+   height: 100%;
+   width: 100%;
+   font-weight: bold;
+   font-size: 15px;
+   border-top-left-radius: 15px;
+   border-top-right-radius: 15px;
+   color: white;
+   background-color: rgba(52, 73, 94, 0.98);
+   box-shadow: 4px -1px 5px 1px #999999;
 }
 
 .sub_menu>div>.selected{
-	color: #1b2631;
-	background-color: #e6e6e6;
-	text-shadow: 2px 2px 3px #999999;
+   color: #1b2631;
+   background-color: #e6e6e6;
+   text-shadow: 2px 2px 3px #999999;
 }
 
 .sub_menu>div>button:hover{
-	box-shadow: inset 0 0 5px 1px #808080;
+   box-shadow: inset 0 0 5px 1px #808080;
 }
 
 .desc{
-	display: flex;
-	align-items: flex-end;
-	font-size: 14px;
-	font-weight: bold;
-	color: #a6a6a6;
-	padding-bottom: 7px;
+   display: flex;
+   align-items: flex-end;
+   font-size: 14px;
+   font-weight: bold;
+   color: #a6a6a6;
+   padding-bottom: 7px;
 }
 
 .wrap_list{
-	height: 680px;
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: center;
-	align-content: space-around;
-	/* margin-top: 90px; */
-	border-color: #bfbfbf;
-	border-width: 2.5px;
-	border-style: solid;
-	border-radius: 30px;
-	background-color: white;
+   height: 680px;
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: center;
+   align-content: space-around;
+   /* margin-top: 90px; */
+   border-color: #bfbfbf;
+   border-width: 2.5px;
+   border-style: solid;
+   border-radius: 30px;
+   background-color: white;
 }
 
 .list{
-	width: 780px;
-	height: 560px;
+   width: 780px;
+   height: 560px;
 }
 
 table{
-	width: 100%;
-	border-collapse: collapse;
-	table-layout: fixed;
-	white-space: nowrap;
+   width: 100%;
+   border-collapse: collapse;
+   table-layout: fixed;
+   white-space: nowrap;
 }
 
 tr{
-	border-bottom: 1px solid grey;
-	text-align: center;
-	font-family: '나눔바른고딕';
-	font-weight: bold;
+   border-bottom: 1px solid grey;
+   text-align: center;
+   font-family: '나눔바른고딕';
+   font-weight: bold;
 }
 
 tbody>tr:hover{
-	background-color: #e6e6e6;
-	cursor: pointer;
+   background-color: #e6e6e6;
+   cursor: pointer;
 }
 
 tr>th{
-	font-size: 18px;
-	line-height: 3;
-	color: rgb(52, 73, 94);
+   font-size: 18px;
+   line-height: 3;
+   color: rgb(52, 73, 94);
 }
 
 tr>td{
-	font-size: 14px;
-	line-height: 3.3;
+   font-size: 14px;
+   line-height: 3.3;
 }
 
-tr>td>.cancel{
-	height: 30px;
-	width: 60px;
-	position: relative;
-	transform: translateY(8%);
-	border-radius: 8px;
-	border: none;
-	/* Lumen 템플릿 주황색 : rgb(255, 133, 27) / #ff851b */
-	background-color: #f2978d;
-	color: black;
-	font-weight: bold;
-	box-shadow: 0 0 5px 1px #808080;
+tr>td>.cancel {
+    height: 30px;
+    width: 60px;
+    position: relative;
+    transform: translateY(8%);
+    border-radius: 8px;
+    border: none;
+    background-color: #f2978d;
+    color: #f2f2f2;
+    font-weight: bold;
+    box-shadow: 0 0 5px 1px #808080;
 }
 
 tr>td>.cancel:hover{
-	box-shadow: inset 0 0 5px 1px #808080;
+   box-shadow: inset 0 0 5px 1px #808080;
 }
 
 .page{
-	width: 300px;
-	height: 50px;
-	display: flex;
-	justify-content: space-around;
-	align-items: center;
-	font-weight: bold;
-	font-size: 18px;
+   width: 300px;
+   height: 50px;
+   display: flex;
+   justify-content: space-around;
+   align-items: center;
+   font-weight: bold;
+   font-size: 18px;
 }
 
 .page>i{
-	font-size: 25px;
-	color: #cccccc;
+   font-size: 25px;
+   color: #cccccc;
 }
 
 .page>i:hover{
-	color: #b3b3b3;
-	cursor: pointer;
+   color: #b3b3b3;
+   cursor: pointer;
 }
 
 .page>div{
-	display: flex;
-	width: 130px;
-	justify-content: space-around;
+   display: flex;
+   width: 130px;
+   justify-content: space-around;
 }
 
 .page>div>span:hover{
-	color: #bfbfbf;
-	cursor: pointer;
+   color: #bfbfbf;
+   cursor: pointer;
 }
 
 .back{
-	position: absolute;
-	width: 100%;
-	height: 510px;
-	background-color: #f2f2f2;
-	bottom: 0;
-	z-index: -1
+   position: absolute;
+   width: 100%;
+   height: 510px;
+   background-color: #f2f2f2;
+   bottom: 0;
+   z-index: -1
 }
