[11.26 구현] approval page 구현 끝

--- a/src/main/webapp/resources/css/admin/approval-second.css
+++ b/src/main/webapp/resources/css/admin/approval-second.css
@@ -141,9 +141,9 @@ label{
 
 .field{
 	height: 35px;
-	padding-left: 10px;
 	display: flex;
 	align-items: center;
+	margin-bottom: 10px;
 }
 
 .field>label{
