--- a/src/main/webapp/resources/css/management/myIcebox_cart.css
+++ b/src/main/webapp/resources/css/management/myIcebox_cart.css
@@ -292,7 +292,7 @@ html, body {
 .input_wrap>div>i{
 	font-size: 53px;
 	color: rgb(26 132 71);
-	margin-left: 20px;
+	margin-left: 27px;
 	cursor: pointer;
 }
 
@@ -305,7 +305,7 @@ html, body {
 }
 
 .date{
-	width: 100px;
+	width: 218px;
 	height: 50px;
 	border-radius: 10px;
 	border: solid thin lightgray;
@@ -439,18 +439,20 @@ html, body {
 	height: 20px;
 }
 
-.submit{
+.submitBtn{
 	border: none;
 	width: 250px;
 	height: 60px;
-	border-radius: 15px;
 	font-weight: bold;
 	font-size: 20px;
 	color: white;
 	color: rgb(26 132 71);
+	border-radius: 15px;
 	margin-bottom: 15px;
 	cursor: pointer;
-	box-shadow: 5px 5px 5px #333
+	box-shadow: 5px 5px 5px #333;
+	cursor: pointer;
+	background: lightgray;
 }
 
 .flex{
@@ -465,44 +467,14 @@ html, body {
 	font-size: 13px;
 }
 
-
-
-/* 팝업창 */
-.modal{
-	box-shadow:none;
-	border-radius: 5px;
-	background-color: #ededed;
-	position: fixed;
-	
-}
-
-#modal{
-	height: 1285px;
-}
-
-
-/* 팝업창제목 */
-.modal_tit{
-	font-size: 15px;
-}
-
-/* 팝업창 크기 */
-.simple_modal{
-	height: 150px;
-	width: 400px;
-}
-
-/* 팝업창 버튼 색 */
-.modal_left_btn {
-	background-color: #bebebe;
+#send_btn {
 	border: none;
+    background: white;
 }
 
-.modal_right_btn {
-	background-color: #6297d5;
-	border: none;
+#send_icon {
+	font-size: 53px;
+	color: rgb(26 132 71);
+	margin-left: 20px;
+	cursor: pointer;
 }
-
-
-
-
