--- a/src/main/webapp/resources/css/management/myAccountBook.css
+++ b/src/main/webapp/resources/css/management/myAccountBook.css
@@ -212,7 +212,6 @@ html, body {
 	justify-content: center;
 	align-items: center;
 	margin-top: 25px;
-	display: no
 }
 
 
@@ -327,21 +326,23 @@ html, body {
 }
 
 .fixed_category{
-	width: 225px;
+	width: 210px;
 	height:35px;
 	border-radius: 10px;
 	border: solid thin lightgray;
 	margin-left: 10px;
 	color: gray;
+	padding: 0 15px;
 	margin-top: 10px;
 }
 .input_date{
-	width: 105px;
+	width: 100px;
 	height:35px;
 	border-radius: 10px;
 	border: solid thin lightgray;
 	margin-left: 10px;
 	color: gray;
+	padding: 0 10px;
 	margin-top: 10px;
 }
 
