--- a/src/main/webapp/WEB-INF/views/mail-template/NewFile.html
+++ b/src/main/webapp/WEB-INF/views/mail-template/NewFile.html
@@ -555,7 +555,7 @@ p{
       <div class="layout one-col fixed-width stack" style="Margin: 0 auto;max-width: 600px;min-width: 320px; width: 320px;width: calc(28000% - 167400px);overflow-wrap: break-word;word-wrap: break-word;word-break: break-word;">
         <div class="layout__inner" style="border-collapse: collapse;display: table;width: 100%;background-color: #ffffff;">
         <!--[if (mso)|(IE)]><table align="center" cellpadding="0" cellspacing="0" role="presentation"><tr class="layout-fixed-width" style="background-color: #ffffff;"><td style="width: 600px" class="w560"><![endif]-->
-          <div class="column" style="text-align: left;color: #2b343f;font-size: 17px;line-height: 26px;font-family: ">
+          <div class="column" style="text-align: left;color: #2b343f;font-size: 17px;line-height: 26px;">
         
             <div style="Margin-left: 20px;Margin-right: 20px;">
       <div style="mso-line-height-rule: exactly;line-height: 43px;font-size: 1px;">&nbsp;</div>
