--- a/src/main/webapp/resources/css/member/login-form.css
+++ b/src/main/webapp/resources/css/member/login-form.css
@@ -232,12 +232,12 @@ html, body {
 	padding: 5px 40px 0 40px;
 }
 
-.change_modal_Text{
-	font-size: 18px;
-	font-weight: bold;
-	color: #8B8D8B;
-	margin-bottom: 5px;
-
+.change_modal_Text {
+    font-size: 18px;
+    font-weight: bold;
+    color: #8B8D8B;
+    margin-bottom: 5px;
+    display: flex;
 }
 
 .change_modal_body input{
