[11.29 륜수] 중간 커밋

--- a/src/main/webapp/resources/css/management/myAccountBook.css
+++ b/src/main/webapp/resources/css/management/myAccountBook.css
@@ -2,9 +2,9 @@
 	display: none;
 }
 
-#personal_hidden {
+/* #personal_hidden {
 	display: none;
-}
+} */
 /* 
 #fixed_hidden {
 	display: none;
@@ -116,6 +116,9 @@ html, body {
 	margin-top: 28px;
 }
 
+#error{
+	border: 1px solid red;
+}
 
 .expenses{
 	display: flex;
