--- a/src/main/webapp/resources/css/management/myAccountList.css
+++ b/src/main/webapp/resources/css/management/myAccountList.css
@@ -150,7 +150,7 @@ html, body {
 	margin-top: 10px;
 }
 
-.year, .month {
+.year, .month, .day {
 	font-size: 20px;
 	margin-top: 10px;
 	font-weight: bold;
