--- a/src/main/webapp/resources/css/community/write_board.css
+++ b/src/main/webapp/resources/css/community/write_board.css
@@ -51,7 +51,6 @@
 }
 
 form{
-    font-size:30px;
     width:1000px;
     height:400px;
 }
@@ -80,7 +79,6 @@ form{
 #write_btn{
 	width: 200px;
 	height: 45px;
-	margin-top: 40px;
 	border-radius: 10px;
     background-color: rgb(52, 73, 94);
     display: flex;
@@ -92,4 +90,76 @@ form{
     transition: all 0.13s;
     cursor: pointer;
     color: white;
+}
+
+.private_txt{
+	margin: 10px 20px 0 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 18px;
+  width: 18px;
+  left: 3.7px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #34cb73;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+.switch {
+  position: relative;
+  display: inline-block;
+  margin: 10px 40px 0 0;
+  width: 52px;
+  height: 26px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.footer{
+	display: flex;
+	justify-content: flex-end;
+	margin-top: 40px;
 }
