[11.30 구현] 커뮤니티 view 게시판 구현 중 -> 답글 기능 남음

--- a/src/main/webapp/resources/css/community/view_board.css
+++ b/src/main/webapp/resources/css/community/view_board.css
@@ -59,6 +59,7 @@
 	display: block;
 	width: 850px;
 	margin-top: 50px;
+	margin-bottom: 50px;
 }
 
 #comment_wrap{
@@ -192,6 +193,7 @@
 
 #write_comment{
 	margin-top: 20px;
+	width: 900px;
 	height: 70px;
 	resize: none;
 	font-size: 18px;
