--- a/src/main/webapp/resources/css/management/myIcebox_note.css
+++ b/src/main/webapp/resources/css/management/myIcebox_note.css
@@ -287,7 +287,21 @@ html, body {
 }
 
 
-.nAndi_btn>button{
+.off_btn{
+	width: 100px;
+	height: 50px;
+	border: none;
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+	margin-left: 3px;
+	background-color: rgb(80, 105, 131);
+	font-size: 20px;
+	font-weight: bold;
+	cursor: pointer;
+	color: lightgray;
+}
+
+.on_btn{
 	width: 100px;
 	height: 50px;
 	border: none;
@@ -298,6 +312,7 @@ html, body {
 	font-size: 20px;
 	font-weight: bold;
 	cursor: pointer;
+	color: white;
 }
 
 .fast_title{
