--- a/src/main/webapp/resources/css/community/index_css.css
+++ b/src/main/webapp/resources/css/community/index_css.css
@@ -1,8 +1,9 @@
 #index_body_container {
     width: 1130px;
-    height:780px;
+    height: 780px;
     border-radius: 20px;
     background-color: rgba(127, 127, 127, 0.06);
+    position: relative;
 }
 
 #index_body_container table {
@@ -40,6 +41,7 @@
     border-radius: 7px;
     flex-direction: column;
     justify-content: space-around;
+    cursor: pointer;
 }
 
 .tr_inner_up_div {
@@ -128,11 +130,12 @@
     font-size: 18px;
     margin: auto;
 }
-.page>i{
-	font-size: 25px;
-	color: #cccccc;
-}
 
+.page>i {
+    font-size: 25px;
+    color: #cccccc;
+    margin-top: 4px;
+}
 .page>i:hover{
 	color: #b3b3b3;
 	cursor: pointer;
@@ -166,6 +169,7 @@
     border-radius: 7px;
     margin: 0 10px 0 100px;
     border: solid 2px lightgray;
+    cursor: pointer;
 }
 
 .bee {
@@ -180,4 +184,12 @@
     margin: 30px 0 9px 0;
     display: flex;
     justify-content: space-between;
+}
+
+i.fas.fa-pen-square {
+    position: absolute;
+    color: #e67e00;
+    font-size: 50px;
+    right: 0;
+    cursor: pointer;
 }
