--- a/src/main/webapp/resources/css/community/view_board.css
+++ b/src/main/webapp/resources/css/community/view_board.css
@@ -7,6 +7,7 @@
     display: flex;
     justify-content: center;
     /* flex-direction: column; */
+    margin-bottom: 30px;
 }
 
 #view_body_container {
@@ -125,19 +126,16 @@
     border: 1px solid lightgray;
 }
 
-#comment_item>div{
-	font-size: 18px;
-}
-
-
 #comment_user {
     width: 110px;
     /* margin-top: 25px; */
-    margin-right: 10px;
-    margin-left: 20px;
+    margin-right: 2px;
+    margin-left: px;
     align-self: center;
+    font-size: 18px;
+    font-weight: bold;
+    justify-content: center;
 }
-
 #item_line {
     width: 0px;
     /* height: 30px; */
@@ -155,6 +153,7 @@
     margin-right: 10px;
     /* vertical-align: middle; */
     align-self: center;
+    font-size: 18px;
 }
 
 #comment_date{
@@ -164,10 +163,12 @@
 
 .comment-func {
     display: flex;
-    /* flex-direction: column; */
     align-items: center;
     margin-bottom: 10px;
     margin-top: 10px;
+    margin-left: 50px;
+    font-weight: bold;
+    color: #454545;
 }
 
 #edit_item {
@@ -245,6 +246,7 @@
     box-shadow: 3px 3px black;
     cursor: pointer;
     border: none;
+    margin-bottom: 30px;
 }
 
 #submit_comment:hover {
